fixed an issue with images not showing up propotionally in Safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -226,6 +226,7 @@ table thead td {
 
 .filmstrip img {
    width: 100%;
+   height: 100%;
 }
 
 @media screen and ( min-width: 600px ) {
